src/app/globals.scss
@use './mixins.scss' as s;
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-background-clip: text;
  -webkit-text-fill-color: var(--light-100);
  transition: background-color 5000s ease-in-out 0s;
  box-shadow: inset 0 0 20px 20px var(--dark-500);
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  font-family: Inter, sans-serif;
  font-weight: 400;
  background: var(--dark-700);
  color: var(--light-100);

  min-height: 100vh;
  max-width: 1280px;
  margin: 0 auto;
}

@layer base {
  :root {
    --dark-100: #4c4c4c;
    --dark-300: #333;
    --dark-500: #171717;
    --dark-700: #0d0d0d;
    --light-100: #ffffff;
    --light-300: #f7fbff;
    --light-900: #8d9094;
    --primary-100: #73a5ff;
    --primary-300: #4c8dff;
    --primary-500: #397df6;
    --primary-700: #2f68cc;
    --primary-900: #2f68cc;
    --danger-500: #cc1439;
    --danger-900: #660a1d;
    --success-500: #14cc70;
    --success-900: #0a6638;
    --info-0: #3677f7;
    --disabled: rgba(227, 227, 227, 0.1);
  }
}

* {
  &::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    @include s.devices(mobile) {
      width: 8px;
      height: 8px;
    }
  }

  &::-webkit-scrollbar-thumb {
    background: var(--disabled);
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 10px 0 0 10px;
  }

  &::-webkit-scrollbar-thumb:horizontal {
    border-radius: 10px 10px 0 0;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }
}

